fix docs on swagger
